# multiplay

./: Dockerfile  LICENSE  README.md  app.py  pyproject.toml  run.sh
static/: app.js  index.html  styles.css
