[project]
name = "multiplay"
version = "0.1.0"
description = "Multi type checker sandbox"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
multiplay = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app.py"]
